--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     image: pexgccacr.azurecr.us/policy:latest
     ports:
       - "8000:8000/tcp"
-    environment:
-      - SECRET_KEY=d97cc311ff95a751c14be5cf1bdf8483c9ba3f74ddc9161675ddfe4a839e6eae97542f5389973c4b
-      - HOSTNAME=.policy-docker.pex-gcc.com
+    volumes:
+      - ./policy/server/policy.py:/app/server/policy.py
+    env_file:
+      - config.env
   nginx:
     hostname: nginx
     container_name: nginx
@@ -17,7 +18,7 @@ services:
       - "80:80/tcp"
       - "443:443/tcp"
     volumes:
-      - ~/docker/django-policy/policy.conf.template:/etc/nginx/templates/policy.conf.template
+      - policy.conf.template:/etc/nginx/templates/policy.conf.template
       - /etc/letsencrypt:/etc/letsencrypt
-    environment:
-      - HOSTNAME=policy-docker.pex-gcc.com
+    env_file:
+      - config.env
