--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 version: "3.9"
 services:
   policy:
+    build: ./policy
     hostname: policy
     container_name: policy
-    image: pexgccacr.azurecr.us/policy:latest
     expose:
       - "8000/tcp"
     volumes:
-      - ./policy/server/policy.py:/app/server/policy.py
+      - ./policy.py:/app/server/policy.py
     env_file:
-      - policy_config.env
+      - policy/policy_config.env
   nginx:
     hostname: nginx
     container_name: nginx
@@ -18,7 +18,7 @@ services:
       - "80:80/tcp"
       - "443:443/tcp"
     volumes:
-      - ./policy.conf.template:/etc/nginx/templates/policy.conf.template
+      - ./nginx/policy.conf.template:/etc/nginx/templates/policy.conf.template
       - /etc/letsencrypt:/etc/letsencrypt
     env_file:
-      - nginx_config.env
+      - nginx/nginx_config.env
