Remove www, modify well-known challenge path

--- a/nginx/policy.conf.template
+++ b/nginx/policy.conf.template
@@ -27,7 +27,7 @@ server {
   } # managed by Certbot
 
   location /.well-known/acme-challenge/ {
-      root /var/www/certbot;
+      root /var/www/certbot/${HOSTNAME};
   }
 
   server_name               .${HOSTNAME};
