--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - ./policy.py:/app/server/policy.py
     env_file:
       - config.env
+    restart: always
   nginx:
     build: ./nginx
     hostname: nginx
@@ -22,6 +23,7 @@ services:
       - certbot_acme_challenge:/var/www/certbot
     env_file:
       - config.env
+    restart: always
   certbot:
     build: ./certbot
     hostname: certbot
@@ -31,6 +33,7 @@ services:
       - certbot_acme_challenge:/var/www/certbot
     env_file:
       - config.env
+    restart: always
   cron:
     build: ./cron
     hostname: cron
