Test generating secret key in Dockerfile

--- a/policy/Dockerfile
+++ b/policy/Dockerfile
@@ -22,7 +22,9 @@ WORKDIR /app
 
 ENV VIRTUAL_ENV /env
 ENV PYTHONPATH /app:/app/server:/app/project:/app/policy
-ENV SECRET_KEY overwrite_in_docker_config
+#ENV SECRET_KEY overwrite_in_docker_config
+RUN SECRET_KEY=`python3 -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'` \
+    && export SECRET_KEY
 
 RUN find . -name "*.py" -exec chmod +x {} \; \
     && find . -name "*.sh" -exec chmod +x {} \; \
