--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
       - "8000/tcp"
     volumes:
       - ./policy.py:/app/server/policy.py
-    env_file:
-      - config.env
+    #    env_file:
+    #      - config.env
     restart: always
   nginx:
     build: ./nginx
