--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-HOSTNAME=policy-docker.pex-gcc.com
-CERTBOT_EMAIL=matt.carson@pexip.com
-CERTBOT_TEST_CERT=0
+HOSTNAME=<fqdn>
+CERTBOT_EMAIL=<email>
+CERTBOT_TEST_CERT=<0 for production cert, 1 for testing cert>
 CERTBOT_RSA_KEY_SIZE=4096
